--- a/code/code2.Rmd
+++ b/code/code2.Rmd
@@ -551,7 +551,7 @@ model3 <- lm(data = df.modeling , MCDrate ~ Pct.NHB + Pct.HL + HealthCenterState
 
 model4 <- lm(data = df.modeling , MCDrate ~ Pct.NHB + Pct.HL + Pct.NHA + Pct.LessThan100pctFPL + Pct.MCD + Pct.MCR + Pct.None + HealthCenterState + I(MCRadjustment*100) + UrbanRuralFlag  )
 
-model5 <- lm(data = df.modeling , MCDrate ~ Pct.NHB*Pct.HL + Pct.NHA + Pct.LessThan100pctFPL + Pct.MCD + Pct.MCR + Pct.None + HealthCenterState + I(MCRadjustment*100) + UrbanRuralFlag )
+model5 <- lm(data = df.modeling, MCDrate ~ Pct.NHB*Pct.HL + Pct.NHA + Pct.LessThan100pctFPL + Pct.MCD + Pct.MCR + Pct.None + HealthCenterState + I(MCRadjustment*100) + UrbanRuralFlag )
 
 #stargazer(model1, model2, model2.5, model3, model4, model5, type="text", omit = c("HealthCenterState","Constant"))
 stargazer(model3, model4, model5, type="text", omit = c("HealthCenterState","Constant"))
@@ -754,6 +754,7 @@ summary(mechiv)
 stargazer(mechols.1, mechols.2, mechols.3, mechols.4, mechiv, type = 'text', omit = c("HealthCenterState","Constant"))
 
 
+
 ```
 
 
@@ -818,16 +819,18 @@ stargazer(mechiv.OR, mechiv.notOR, type = 'text', omit = c("HealthCenterState","
 
 
 
-splits <- median(df.fins[is.na(df.fins$Tribal) & df.fins$HealthCenterState %notin% c("OR"),]$Pct.NHB + df.fins[is.na(df.fins$Tribal)& df.fins$HealthCenterState %notin% c("OR"),]$Pct.HL)
-cuts_Cost <- quantile(df.fins[is.na(df.fins$Tribal) & df.fins$HealthCenterState %notin% c("OR"),]$CostPerPatient, probs = c(0.025, 0.975), na.rm = TRUE)
-cuts_Rate <- quantile(df.fins[is.na(df.fins$Tribal) & df.fins$HealthCenterState %notin% c("OR"),]$MCDrate, probs = c(0.025, 0.975), na.rm = TRUE)
+splits <- median(df.fins[is.na(df.fins$Tribal) & df.fins$HealthCenterState %notin% c(),]$Pct.NHB + df.fins[is.na(df.fins$Tribal)& df.fins$HealthCenterState %notin% c(),]$Pct.HL)
+
+
+cuts_Cost <- quantile(df.fins[is.na(df.fins$Tribal) & df.fins$HealthCenterState %notin% c(),]$CostPerPatient, probs = c(0.025, 0.975), na.rm = TRUE)
+cuts_Rate <- quantile(df.fins[is.na(df.fins$Tribal) & df.fins$HealthCenterState %notin% c(),]$MCDrate, probs = c(0.025, 0.975), na.rm = TRUE)
 
 
 results <- oaxaca(data = df.fins  %>% 
                     mutate(Split = ifelse(( Pct.NHB + Pct.HL ) >= splits, 1, 
                                                      ifelse(( Pct.NHB + Pct.HL ) <= splits, 0, NA))) %>% 
                     #filter(is.na(Tribal)) %>% 
-                    filter(is.na(Tribal) & HealthCenterState %notin% c("OR")) %>% 
+                    filter(is.na(Tribal) & HealthCenterState %notin% c()) %>% 
                     mutate(CostPerPatient = ifelse(CostPerPatient > cuts_Cost[2], cuts_Cost[2],
                                                    ifelse(CostPerPatient < cuts_Cost[1], cuts_Cost[1], CostPerPatient))) %>%
                     mutate(MCDrate = ifelse(MCDrate > cuts_Rate[2], cuts_Rate[2],
@@ -846,7 +849,7 @@ results <- oaxaca(data = df.fins  %>%
   #   filter(Cut > 0),
   #MCDrate ~ AvgMCDrate + CostPerPatient + Pct.LessThan100pctFPL + Pct.Homeless + Pct.FarmWorker + Pct.MCD + Pct.None + MCRadjustment + Need | Split, R = 1000, cluster = df.fins$BHCMISID)
   MCDrate ~ AvgMCDrate + CostPerPatient + Need + MCRadjustment + Pct.MCD | Split, R = 1000)
-  #MCDrate ~ AvgMCDrate + CostPerPatient | Split, R = 1000, cluster = df.fins$BHCMISID)
+  #MCDrate ~ AvgMCDrate + CostPerPatient + Need + Pct.NHA + Pct.LessThan100pctFPL + Pct.MCD + Pct.MCR + Pct.None + I(MCRadjustment*100) + UrbanRuralFlag| Split, R = 1000, cluster = df.fins$BHCMISID)
 
 
 #plot(results, decomposition = "threefold")
@@ -895,9 +898,10 @@ rbind(results$threefold$overall, results$threefold$variables) %>%
 
 
 
- df.fins  %>% filter(!is.na(fs_miscellaneous))
-
 ```
+
+
+
 
 
 
