--- a/code/code2.Rmd
+++ b/code/code2.Rmd
@@ -25,6 +25,7 @@ library(oaxaca)
 
 library(knitr)
 library(kableExtra)
+library(quantreg)
 
 
 `%notin%` <- Negate(`%in%`)
@@ -264,6 +265,48 @@ df.geocoded <- df.geocoded %>%
 
 
 ```
+
+
+
+## Comparing Dental
+```{r}
+clinicrates <- read_excel(path = "/Users/jhm65/Dropbox/Git/HealthCenterPPS/data/CHC_PPS_Crosswalk.xlsx", sheet = "PPSRates")
+
+
+ratesbyservice <- clinicrates %>% 
+ filter(!is.na(Dental) & HealthCenterState %notin% c("WI")) %>% 
+  mutate(Medical = ifelse(is.na(Medical), Values, Medical)) %>% 
+  select(HealthCenterName...1, HealthCenterState, Medical, Dental, BH) %>% 
+  pivot_longer(cols = c(Medical, Dental, BH)) 
+
+## Plain boxplot by service line
+p <- ggplot(data = ratesbyservice, aes(x = value, y = name)) + geom_boxplot() + xlab("PPS Rates ($)") + ylab("Service Line")
+suppressWarnings(print(p))
+
+## Regression of differences
+summary(lm(data = ratesbyservice, value ~ name))
+rqfit <- rq(data = ratesbyservice, value ~ name)
+summary(rqfit)
+
+## Facet Wrap to show differences by service line across states
+p <- ggplot(data = ratesbyservice, aes(x = value, y = name)) + geom_boxplot() + facet_wrap(~HealthCenterState) + xlab("PPS Rate ($)") + ylab("Service Line")
+suppressWarnings(print(p))
+p <- ggplot(data = ratesbyservice, aes(x = value, y = name)) + geom_boxplot() + facet_wrap(~HealthCenterState, scales = "free_x") + xlab("PPS Rate ($)") + ylab("Service Line")
+suppressWarnings(print(p))
+
+
+## Comparisons of Means
+p <- ratesbyservice %>% 
+  group_by(HealthCenterState, name) %>% 
+  summarise(PPS = mean(value, na.rm = TRUE)) %>% 
+  rename(ServiceLine = name) %>% 
+  ggplot(aes(x = HealthCenterState, y = PPS, fill = ServiceLine)) + geom_bar(stat='identity', position='dodge') + theme_tufte_revised() + 
+  ggtitle("Average PPS Rates by Service Line and State")
+suppressWarnings(print(p))
+
+```
+
+
 
 
 ## UDS Data
